--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -115,8 +115,7 @@ If a body is in equilibrium, the sum of the virtual work done by all the forces 
     <Item>Remove all the forces that do not complete any work. </Item>
     <Item>Differentiate the position coordinates to obtain virtual displacement.</Item>
     <Item>Write the virtual work equation, expressing the virtual work of every force and moment.</Item>
-    <Item>Factor out the common virtual displacement term (<InlineEquation equation="dr \\text{ and/or } d\\theta"/>).</Item> 
-    <Item>Solve.</Item>
+    <Item>Factor out the common virtual displacement term (<InlineEquation equation="dr"/> and/or <InlineEquation equation="dr"/>) and solve.</Item> 
 </Enumerate>
 
 <p>We can use virtual work to solve for the forces in a system without needing to solve for all of the support reactions. 
