--- a/src/pages/about/docs.astro
+++ b/src/pages/about/docs.astro
@@ -62,9 +62,9 @@ I want to:
 
 <SubSection id="basics" title="How to import components">
 
-Make sure to import the element at the top of the page before using it. If you get an error like `XXX is not defined`, this is typically what it's refering to. To import an element, use the following syntax:
+Make sure to import the element at the top of the page before using it. If you get an error like `XXX is not defined`, this is typically what it's refering to. To import an element, use the following syntax.
 <CodeBox code=`import Component from '../../components/Component.astro'` />
-, where `Component` refers to the name of the component you want to import.
+`Component` refers to the name of the component you want to import.
 </SubSection>
 
 <SubSection title="Inserting components into HTML page" >
