--- a/src/pages/about/examples/example.astro
+++ b/src/pages/about/examples/example.astro
@@ -10,14 +10,44 @@ import InlineEquation from "../../../components/InlineEquation.astro";
 import DisplayEquation from "../../../components/DisplayEquation.astro";
 import DisplayTable from "../../../components/DisplayTable.astro";
 import Warning from "../../../components/Warning.astro";
+import InlineCanvas from "../../../components/InlineCanvas.astro";
 ---
 
 <Layout title="Mechref Example Skeleton">
+
+    <div slot="navtree">
+        <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#secondary-section'>Secondary Section</a>
+                <ul class='list-group list-group-flush py-0'> 
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#tertiary-section'>Tertiary Section</a>
+                        <ul class='list-group list-group-flush py-0'> 
+                            <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#quaternary-section'>Quaternary Section</a></li> 
+                        </ul>
+                    </li> 
+                </ul>
+            </li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#math-section'>Math in Mechref</a>
+                <ul class='list-group list-group-flush py-0'> 
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#inline-math'>Inline Math</a></li> 
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#display-math'>Display Math</a></li>  
+                </ul>
+            </li>  
+        </ul>
+    </div>
+
+
+
     <Section id="main-section" title="Main section">
         <p>
             Use this page to get familiar with the different components Mechref has to offer. Resize the browser window to visualize how the pages look like on different screen sizes (desktop vs. tablet vs. phone).
         </p>
-        
+        <p>
+            The <a href="/about/docs"> Style guide & documentation</a> has a detailed explanation of how a page should be set up and a list of the different elements that can be added to a page.
+            This page is just meant to get you started with the basics.
+        </p>
+        <p>
+            Good luck!
+        </p>
     </Section>
 
     <SubSection id="secondary-section" title="Secondary section">
@@ -26,9 +56,6 @@ import Warning from "../../../components/Warning.astro";
         </p>
         <p>
             These will follow the user as they scroll through the section they are defined in, but will stay contained to their section. Scroll up and down to experience this effect.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vel tortor vestibulum, pretium turpis sit amet, dictum lorem. Morbi porta turpis egestas, semper nulla eget, suscipit nulla. Praesent nibh elit, tempor eget sollicitudin et, ultrices id est. Donec rutrum varius mollis. Donec quis eros a elit molestie aliquam id ac lacus. Aliquam ultrices, mauris dapibus rhoncus iaculis, metus turpis auctor mauris, et accumsan dolor justo dictum felis. Donec porttitor ornare malesuada. Quisque in auctor leo, quis aliquam quam. Nunc maximus eget orci ac tristique. Nunc eu purus eu augue ornare commodo vehicula non est. Mauris a fringilla lectus. Nunc ultricies purus in tortor lacinia ultricies.
         </p>
 
         <CalloutContainer slot="cards">
@@ -42,41 +69,40 @@ import Warning from "../../../components/Warning.astro";
         There exists a hierarchy of sections to indicate to students that certain concepts are directly related to another. The main "Section" item should only be used at the top of the page and acts as the page's title. There also exist "SubSection", "SubSubSection", and "SubSubSubSection", each with a progressively smaller header and faded color, to emphasize that they belong inside another bigger section.
     </SubSubSection>
 
-    <SubSubSubSection id="quatenary-section" title="Quatenary section">
-        An even smaller section.
+    <SubSubSubSection id="quaternary-section" title="Quaternary section">
+        Each page also has its own navtree on the left-hand side (desktop and tablet) or at the top (phone)  that links to each Subsection, SubSubSection and SubSubSubSection.
+
     </SubSubSubSection>
 
     <SubSection id="math-section" title="Math in Mechref">
         <p>
-            <InlineEquation equation="\\LaTeX"/> can be used inside your pages. Just like in Latex, we differentiate between inline-math and display-math:
+            <InlineEquation equation="\\LaTeX"/> can be used inside your pages. Just like in Latex, we differentiate between inline-math and display-math.
         </p>
-        <p class="m-0">
-            <u>Example of inline-math:</u>
-        </p> 
-        <p>
-            <InlineEquation equation="E = mc^2"/> as proved by Einstein.
-        </p>
-        <p class="m-0">
-            <u>Example of display-math:</u>
-        </p> 
-        <p>
-            <DisplayEquation equation="E = mc^2"></DisplayEquation>
-            as proved by Einstein.
-        </p>
-        <p>
-            For really important equations, we can emphasize them using a background, and give them a title and id for easy reference in other pages:
-            <DisplayEquation equation="\\begin{aligned}&{\\text{Find a vector}}&&\\mathbf {x} \\\\&{\\text{that maximizes}}&&\\mathbf {c} ^{\\mathsf {T}}\\mathbf {x} \\\\&{\\text{subject to}}&&A\\mathbf {x} \\leq \\mathbf {b} \\\\&{\\text{and}}&&\\mathbf {x} \\geq \\mathbf {0} .\\end{aligned}" background="true" title="Standard form of a Linear-Program." id="lp-std-form"/>
-        </p>
-        <p>
-            When we want to show students how a particular equation is derived, we can add an expendable derivation field:
-            <DisplayEquation equation="P\\left(T>s+t\\mid T>s\\right)=P(T>t),\\qquad \\forall s,t\\geq 0." background="true" title="Memorylessness of the exponential distribution." id="exp-memoryless" derivation="true">
-                <DisplayEquation equation="\\begin{aligned}P\\left(T>s+t\\mid T>s\\right)&={\\frac {P \\left(T>s+t\\cap T>s\\right)}{P \\left(T>s\\right)}} \\\\ &={\\frac {P \\left(T>s+t\\right)}{P \\left(T>s\\right)}} \\quad \\text{since} \\; [0, s) \\subset [0, s+t) \\\\ &={\\frac {e^{-\\lambda (s+t)}}{e^{-\\lambda s}}} \\\\ &=e^{-\\lambda t} \\\\ &=P(T>t).\\end{aligned}" />
-            </DisplayEquation>
-        </p>
+    </SubSection>
+
+    <SubSubSection id="inline-math" title="Inline Math">
+        Inline math is math font text inside of sentences where the lines don't break. 
+        For example, <InlineEquation equation="E = mc^2"/> as proved by Einstein.
+        This is most commonly used for variable letters like "the moment <InlineEquation equation="M"/>" or units like "the units for moment are <InlineEquation equation="Nm"/>".
+
+    </SubSubSection>
+
+    <SubSubSection id="display-math" title="Display Math">
+        
+        Display math is for relevant course equations. These are denoted by a different format from the surrounding text. 
+        For example, the same equation as above would look like the following.  
+        <DisplayEquation equation="E = mc^2" title="Mass-energy equivalence" background="True" />
+
+        A block of equations can also be put in the same box if needed. 
+        <DisplayEquation equation="\\begin{aligned}&{\\text{Find a vector}}&&\\mathbf {x} \\\\&{\\text{that maximizes}}&&\\mathbf {c} ^{\\mathsf {T}}\\mathbf {x} \\\\&{\\text{subject to}}&&A\\mathbf {x} \\leq \\mathbf {b} \\\\&{\\text{and}}&&\\mathbf {x} \\geq \\mathbf {0} .\\end{aligned}" background="true" title="Standard form of a Linear-Program." id="lp-std-form"/>
+
+        When we want to show students how a particular equation is derived, we can add an expendable derivation field.
+        <DisplayEquation equation="P\\left(T>s+t\\mid T>s\\right)=P(T>t),\\qquad \\forall s,t\\geq 0." background="true" title="Memorylessness of the exponential distribution." id="exp-memoryless" derivation="true">
+            <DisplayEquation equation="\\begin{aligned}P\\left(T>s+t\\mid T>s\\right)&={\\frac {P \\left(T>s+t\\cap T>s\\right)}{P \\left(T>s\\right)}} \\\\ &={\\frac {P \\left(T>s+t\\right)}{P \\left(T>s\\right)}} \\quad \\text{since} \\; [0, s) \\subset [0, s+t) \\\\ &={\\frac {e^{-\\lambda (s+t)}}{e^{-\\lambda s}}} \\\\ &=e^{-\\lambda t} \\\\ &=P(T>t).\\end{aligned}" />
+        </DisplayEquation>
         <Warning title="Do not reuse IDs" id="unique-ids">
             These expendable warning fields can be used to emphasize that students should really pay attention to what's inside. Here, we want to warn you not to reuse IDs, since unique IDs are essential to certain features working correctly.
         </Warning>
-
-    </SubSection>
+    </SubSubSection>
 
 </Layout>
