--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -42,7 +42,7 @@ Virtual work (<InlineEquation equation='dU' />) is the work produced by a force 
 
 
 
-<DisplayEquation equation='\\vec{dU} = \\vec{F}\\cdot d\\vec{r}\\' title="Virtual work." background="True"/>     
+<DisplayEquation equation='dU = \\vec{F}\\cdot d\\vec{r}\\' title="Virtual work." background="True"/>     
 
 
 
@@ -84,7 +84,7 @@ Virtual work (<InlineEquation equation='dU' />) is the work produced by a force 
     Couple moment virtual work (<InlineEquation equation='dU' />) is the work produced by a couple moment (<InlineEquation equation='M' />) over an infinitesimally small angular displacement (<InlineEquation equation='d\\theta' />).
     </p>
     
-    <DisplayEquation equation='\\vec{dU} = \\vec{M} \\cdot d\\theta \\hat{k}' title="Virtual work of a couple moment." background="False" derivation="True" id="cpl-mmt">
+    <DisplayEquation equation='dU = \\vec{M} \\cdot d\\theta \\hat{k}' title="Virtual work of a couple moment." background="True" derivation="False" id="cpl-mmt">
 
         <DisplayEquation equation="dU = \\Sigma \\vec{F_i} \\cdot d\\vec{r_i}"/>
         <DisplayEquation equation="dU = \\vec{F_A} \\cdot d\\vec{r_A} +\\vec{F_B} \\cdot d\\vec{r_B}"/>
@@ -103,7 +103,7 @@ Virtual work (<InlineEquation equation='dU' />) is the work produced by a force 
 
 If a body is in equilibrium, the sum of the virtual work done by all the forces and couple moments acting on the body is zero. We can use this principle to solve for the forces on systems. 
 
-<DisplayEquation equation="\\sum{dU} = \\sum{\\vec{F}d\\vec{x}} + \\sum{\\vec{M}d\\vec{\\theta}} = 0 " title="Virtual work equilibrium." background="True"/>
+<DisplayEquation equation="\\sum{dU} = \\sum{\\vec{F}d \\cdot \\vec{x}} + \\sum{\\vec{M} \\cdot d\\vec{\\theta}} = 0 " title="Virtual work equilibrium." background="True"/>
 
 </SubSection>
 
