updated nav tree

--- a/src/pages/dyn/rigid_body_kinematics.astro
+++ b/src/pages/dyn/rigid_body_kinematics.astro
@@ -65,6 +65,10 @@ import DisplayTable from "../../components/DisplayTable.astro"
 			<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#acce_contact_noslip_convention'>Acceleration in contact (no slip)</a></li>
         </ul>
     </li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#euler-motion'>Euler's laws of motion</a>
+    </li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#rotation-arbitrary'>Rotation about arbitrary reference points</a>
+    </li>
 		<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#applications_rgkinema'>Applications</a>
 	        <ul class='list-group list-group-flush py-0'> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#steering_geometry'>Steering geometry</a></li>
@@ -1247,12 +1251,6 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </tr>
   </tbody>
 </DisplayTable>
-
-</SubSection>
-
-
-
-<SubSection title="Applications" id="applications_rgkinema">
 
 </SubSection>
 
