--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -103,7 +103,7 @@ Virtual work (<InlineEquation equation='dU' />) is the work produced by a force 
 
 If a body is in equilibrium, the sum of the virtual work done by all the forces and couple moments acting on the body is zero. We can use this principle to solve for the forces on systems. 
 
-<DisplayEquation equation="\\sum{dU} = \\sum{\\vec{F} \\cdot d\\vec{x}} + \\sum{\\vec{M} \\cdot d\\vec{\\theta}} = 0 " title="Virtual work equilibrium." background="True"/>
+<DisplayEquation equation="\\sum{dU} = \\sum{\\vec{F} \\cdot d\\vec{r}} + \\sum{\\vec{M} \\cdot d\\vec{\\theta}} = 0 " title="Virtual work equilibrium." background="True"/>
 
 </SubSection>
 
