--- a/src/pages/about/docs.astro
+++ b/src/pages/about/docs.astro
@@ -311,7 +311,7 @@ Example:
 ` />
 <p class="mt-3">Result:</p>
 
-<InlineEquation equation=`\\\\vec{F} = m\\\\vec{a}` /> is a very important equation you guys need to remember.
+<InlineEquation equation=`\\vec{F} = m\\vec{a}` /> is a very important equation you guys need to remember.
 </SubSubSection>
 
 
@@ -425,7 +425,7 @@ Example:
 
 <p class="mt-3">Result:</p>
 <div style="width: 100%; display: flex; align-items: center; justify-content:center;">
-<Image src="/public/Solid_Mechanics/Bending-Figures/Geometry.png" width="5" />
+<Image src="/Solid_Mechanics/Bending-Figures/Geometry.png" width="5" />
 </div>
 
 <p class="mt-3"><u>Regular:</u></p>
@@ -444,7 +444,7 @@ Example:
 
 <p class="mt-3">Result:</p>
 <div style="width: 100%; display: flex; flex-direction: column; align-items: center; justify-content:center;">
-<Image src="/public/Solid_Mechanics/Torsion-Figures/Equilibrium.png" width="3">
+<Image src="/Solid_Mechanics/Torsion-Figures/Equilibrium.png" width="3">
     Wow that's a beautiful image
 </Image>
 </div>
