--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -84,8 +84,10 @@ Virtual work (<InlineEquation equation='dU' />) is the work produced by a force 
     Couple moment virtual work (<InlineEquation equation='dU' />) is the work produced by a couple moment (<InlineEquation equation='M' />) over an infinitesimally small angular displacement (<InlineEquation equation='d\\theta' />).
     </p>
     
-    <DisplayEquation equation='dU = \\vec{M} \\cdot d\\theta \\hat{k}' title="Virtual work of a couple moment." background="True" derivation="False" id="cpl-mmt">
-
+    <DisplayEquation equation='dU = \\vec{M} \\cdot d\\theta \\hat{k}' title="Virtual work of a couple moment." background="True" id="cpl-mmt">
+    </DisplayEquation>
+        
+        <!--
         <DisplayEquation equation="dU = \\Sigma \\vec{F_i} \\cdot d\\vec{r_i}"/>
         <DisplayEquation equation="dU = \\vec{F_A} \\cdot d\\vec{r_A} +\\vec{F_B} \\cdot d\\vec{r_B}"/>
         <DisplayEquation equation="dU = -\\vec{F} \\cdot (d\\vec{r_A} + d\\theta \\vec{k} \\times \\vec{r_{AA}}) + F \\cdot (d\\vec{r_A} + d\\theta \\vec{k} \\times \\vec{r_{AB}})"/>
@@ -95,7 +97,7 @@ Virtual work (<InlineEquation equation='dU' />) is the work produced by a force 
         <DisplayEquation equation="dU = d\\theta \\vec{k} \\cdot (\\vec{r_{AB}} \\times \\vec{F})"/>
         <DisplayEquation equation="dU = d\\theta \\vec{k} \\cdot \\vec{M}"/>
         <DisplayEquation equation="dU = M \\vec{k} \\cdot d\\theta \\vec{k}"/>
-    </DisplayEquation>
+        -->
 
 </SubSubSection>
 
