--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -59,6 +59,21 @@ The maximum static frictional force is written as:
 	Variables <b> <InlineEquation equation=" F_f "/> </b> and <b> <InlineEquation equation=" N "/> </b> are the magnitude of the friction force <b> <InlineEquation equation=" \\vec{F_f} "/> </b> and the normal force <b> <InlineEquation equation=" \\vec{N} "/> </b>, and <b> <InlineEquation equation=" \\mu_s "/> </b> is the coefficient of static friction.
 </p>
 
+<CalloutContainer slot="cards">
+        <CalloutCard title="Did you know?">
+            <p>
+                Mabuchi et al. conducted a <a href = "https://www.jstage.jst.go.jp/article/trol/7/3/7_147/_article">study in 2012</a> to examine the coefficient of static friction of a banana peel! 
+		They determined the coefficient of static friction of a banana peel and found it to be almost 6x as slippery as the floor, with <InlineEquation equation=" \\mu_s "/>= 0.066! 
+		They also examined other fruit peels and found apples have a <InlineEquation equation=" \\mu_s "/> of 0.125, orange peels have a <InlineEquation equation=" \\mu_s "/> of 0.198, and tangerine peels are the least slippery with <InlineEquation equation=" \\mu_s "/> = 0.225. 
+              </p>
+		
+              <p>
+                This study won the 2014 <a href = "https://www.bbc.com/news/science-environment-29253796">Ig Nobel Prize</a>, which recognizes unusual scientific achievements. 
+		Insights gained from the study could help with undertanding more about how <a href = "https://www.sciencedirect.com/science/article/pii/S2405451816300253">articular joints</a> are lubricated and move. 
+              </p>
+        </CalloutCard>
+    </CalloutContainer>
+
 </Section>
 
 <SubSection title="Static Friction" id="static_friction">
