--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -63,7 +63,7 @@ The maximum static frictional force is written as:
         <CalloutCard title="Did you know?">
             <p>
                 Mabuchi et al. conducted a <a href = "https://www.jstage.jst.go.jp/article/trol/7/3/7_147/_article">study in 2012</a> to examine the coefficient of static friction of a banana peel! 
-		They determined the coefficient of static friction of a banana peel and found it to be almost 6x as slippery as the floor, with <InlineEquation equation=" \\mu_s "/>= 0.066! 
+		They found banana peels to be almost 6x as slippery as the floor, with <InlineEquation equation=" \\mu_s "/>= 0.066! 
 		They also examined other fruit peels and found apples have a <InlineEquation equation=" \\mu_s "/> of 0.125, orange peels have a <InlineEquation equation=" \\mu_s "/> of 0.198, and tangerine peels are the least slippery with <InlineEquation equation=" \\mu_s "/> = 0.225. 
               </p>
 		
