--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -69,7 +69,7 @@ The maximum static frictional force is written as:
 		
               <p>
                 This study won the 2014 <a href = "https://www.bbc.com/news/science-environment-29253796">Ig Nobel Prize</a>, which recognizes unusual scientific achievements. 
-		Insights gained from the study could help with undertanding more about how <a href = "https://www.sciencedirect.com/science/article/pii/S2405451816300253">articular joints</a> are lubricated and move. 
+		<a href = "https://www.sciencedirect.com/science/article/pii/S2405451816300253">Insights gained from the study</a> could help with undertanding more about how articular joints are lubricated and move. 
               </p>
         </CalloutCard>
     </CalloutContainer>
