--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -66,7 +66,9 @@ The maximum static frictional force is written as:
 		They found banana peels to be almost 6x as slippery as the floor, with <InlineEquation equation=" \\mu_s "/>= 0.066! 
 		They also examined other fruit peels and found apples have a <InlineEquation equation=" \\mu_s "/> of 0.125, orange peels have a <InlineEquation equation=" \\mu_s "/> of 0.198, and tangerine peels are the least slippery with <InlineEquation equation=" \\mu_s "/> = 0.225. 
               </p>
-		
+
+		<Image src='/Statics/FrictionFigures/BananaPeel.png' width='5'>Image from Mabuchi, Kiyoshi, et al. "Ig Nobel Prize-winning episode: Trip from a slip on a banana peel to the mysterious world of mucus." Biosurface and Biotribology 2.3 (2016): 81-85.</Image>
+
               <p>
                 This study won the 2014 <a href = "https://www.bbc.com/news/science-environment-29253796">Ig Nobel Prize</a>, which recognizes unusual scientific achievements. 
 		<a href = "https://www.sciencedirect.com/science/article/pii/S2405451816300253">Insights gained from the study</a> could help with undertanding more about how articular joints are lubricated and move. 
