--- a/src/pages/sta/free_body_diagrams.astro
+++ b/src/pages/sta/free_body_diagrams.astro
@@ -73,7 +73,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
 In this course we assume that a pulley is frictionless, meaning that the magnitude of the tensile force of the rope on either side of a pulley will be the same. 
 
-<DisplayEquation equation='{T_1} = {T_2}\\' />
+<DisplayEquation equation='{T_1} = {T_2}\\' title="Pulley Assumptions" background="True" />
 
 <Image src='/Statics/FBDFigures/PulleyAssumptions.jpg' width='3'></Image>
 
@@ -83,9 +83,9 @@ In this course we assume that a pulley is frictionless, meaning that the magnitu
 
 In this course, we assume springs are linearly elastic, which means that the force (tension) in the spring is linearly proportional to the extension of the spring (<InlineEquation equation='s' />) through the spring constant, <InlineEquation equation='k' />.
 
-<DisplayEquation equation='{F} = {k*s}\\' />
+<DisplayEquation equation='{F} = {k*s}\\' title="Spring force-extension relation" background="True" />
 
-<DisplayEquation equation='{s} = {l-l_0}\\' />
+<DisplayEquation equation='{s} = {l-l_0}\\' title="Spring extension" background="True" />
 
 <Image src='/Statics/FBDFigures/SpringAssumptions.jpg' width='6'></Image>
 
