--- a/src/pages/sta/moments.astro
+++ b/src/pages/sta/moments.astro
@@ -39,7 +39,7 @@ The only force that produces a rotation about a point is a force perpendicular t
 
 Moments can be written as scalar quantities, where 
 
-<DisplayEquation equation='{M_A} = F*d\\' />
+<DisplayEquation equation='{M_A} = F*d\\' title="Scalar Moment" background="True" />
 
 Note that d is the distance from the applied force to the point of interest and that the force F is the force perpendicular to the moment arm. 
 
@@ -61,13 +61,13 @@ Moments are assumed to be positive when they point in the <InlineEquation equati
 
 Moments can also be written as vector quantities, where the moment about point A is the cross product of the moment arm, <InlineEquation equation='r' /> and the force <InlineEquation equation='F' />. 
 
-<DisplayEquation equation='\\vec{M_A} = \\vec{r} \\times \\vec{F}\\' />
+<DisplayEquation equation='\\vec{M_A} = \\vec{r} \\times \\vec{F}\\' title="Vector Moment" background="True" />
 
 Using this formula, moments could have an <InlineEquation equation='\\hat{i}' />, <InlineEquation equation='\\hat{j}' />, and <InlineEquation equation='\\hat{k}' /> component. 
 
 The magnitude of the moment can be written as 
 
-<DisplayEquation equation='\\vert\\vec{M_A}\\vert = \\vert\\vec{r}\\vert \\vert\\vec{F}\\vert sin\\theta\\' />
+<DisplayEquation equation='\\vert\\vec{M_A}\\vert = \\vert\\vec{r}\\vert \\vert\\vec{F}\\vert sin\\theta\\' title="Moment Magnitude" background="True" />
 
 </SubSection>
 
@@ -79,7 +79,7 @@ A couple moment is a set of two equal and opposite forces with parallel lines of
 
 The resulting moment from a force couple can be written as 
 
-<DisplayEquation equation='M_A = F*d_{\\perp}\\' />
+<DisplayEquation equation='M_A = F*d_{\\perp}\\' title="Moment of a force couple" background="True" />
 
 where <InlineEquation equation='F' /> is the magnitude of one of the force vectors and d is the perpendicular distance between the two vectors. 
 
