--- a/src/pages/sta/trusses.astro
+++ b/src/pages/sta/trusses.astro
@@ -65,7 +65,7 @@ In our class, we'll assume that members are <strong>always in tension</strong>. 
 <p>
 A two force member is a rigid body that has two forces (no moments) acting on it in two locations, say \(A\) and \(B\). Equilibrium of the two-force member implies</p>
 	
-<DisplayEquation equation="\\vec{F_A} + \\vec{F_B} = \\vec 0," />
+<DisplayEquation equation="\\vec{F_A} + \\vec{F_B} = \\vec 0," title="2FM Equilibrium" background="True" />
 
 resulting in
 
