--- a/src/pages/sta/frames_and_machines.astro
+++ b/src/pages/sta/frames_and_machines.astro
@@ -12,6 +12,7 @@ import InlineEquation from "../../components/InlineEquation.astro"
 import PrairieDrawCanvas from "../../components/PrairieDrawCanvas.astro"
 import Row from "../../components/Row.astro"
 import Col from "../../components/Col.astro"
+import Example from "../../components/Example.astro"
 ---
 <Layout title="Frames and Machines">
 
@@ -64,42 +65,46 @@ Frame and machine analysis involves the following steps:
 </Enumerate>
 
 </p>
-</SubSection>
 
-<SubSection title="Example: Machine" id="examplemachine">
-<p>
-
-This example is from <em>Engineering Statics</em> by Daniel Baker and William Haynes. 
-
-In this question, we want to know what the cutting force is at A and B given an applied load F=60N. 
+<Example id="machine-exmaple title="Machine Example" solution="True">
+ <p>   This example is from <em>Engineering Statics</em> by Daniel Baker and William Haynes. </p>
+<p> In this question, we want to know what the cutting force is at A and B given an applied load F=60N. </p>
 
 <Image src='/Statics/FramesMachinesFigures/Machine_Pliers.jpg' width='4'></Image>
+    <div slot="solution">
+	<p>
 
-<Enumerate>
-	<Item> Through examination, we first notice that the DE and AB are two force members, so the forces on those two members are equal and opposite and pass through the points AB and DE. 
-    	</Item> 
-	<Item> The multi force members that we will examine are members GE and ACD. 
-    	</Item> 
-</Enumerate>
+	<Enumerate>
+		<Item> Through examination, we first notice that the DE and AB are two force members, so the forces on those two members are equal and opposite and pass through the points AB and DE. 
+    		</Item> 
+		<Item> The multi force members that we will examine are members GE and ACD. 
+    		</Item> 
+	</Enumerate>
 
-Let's start with member GE: 
+	Let's start with member GE: 
 
-<Image src='/Statics/FramesMachinesFigures/FBD_GE.jpg' width='5'></Image>
+	<Image src='/Statics/FramesMachinesFigures/FBD_GE.jpg' width='5'></Image>
 
-Taking the sum of force in the x and y direction and the sum of moments about G, we can solve for F<sub>DE</sub>, which is -362.038 N. 
+	Taking the sum of force in the x and y direction and the sum of moments about G, we can solve for F<sub>DE</sub>, which is -362.038 N. 
 
-We can then draw a FBD for member ACD: 
+	We can then draw a FBD for member ACD: 
 
-Note that the force DE, which was in the FBD for member GE, is facing the opposite direction in this FBD. 
+	Note that the force DE, which was in the FBD for member GE, is facing the opposite direction in this FBD. 
 
-<Image src='/Statics/FramesMachinesFigures/FBD_ACD.jpg' width='5'></Image>
+	<Image src='/Statics/FramesMachinesFigures/FBD_ACD.jpg' width='5'></Image>
 
-Writing the sum of moments about point C allows us to solve for the force at A, which is 268.692 N. 
+	Writing the sum of moments about point C allows us to solve for the force at A, which is 268.692 N. 
 
-We can also calculate the mechanical advantage of this machine by dividing the cutting force by the applied force of 60 N. In this case, the maching gives a mechanical advantage of 4.478. 
+	We can also calculate the mechanical advantage of this machine by dividing the cutting force by the applied force of 60 N. In this case, the maching gives a mechanical advantage of 4.478. 
 
-</p>
+	</p>
+
+    </div>
+  </Example>
+
+
 </SubSection>
+
 
 </Layout>
 
