--- a/src/pages/sta/frames_and_machines.astro
+++ b/src/pages/sta/frames_and_machines.astro
@@ -66,9 +66,9 @@ Frame and machine analysis involves the following steps:
 
 </p>
 
-<Example id="machine-exmaple title="Machine Example" solution="True">
- <p>   This example is from <em>Engineering Statics</em> by Daniel Baker and William Haynes. </p>
-<p> In this question, we want to know what the cutting force is at A and B given an applied load F=60N. </p>
+<Example id="machine-example" title="Machine Example" solution="True">
+<p>   This example is from <em>Engineering Statics</em> by Daniel Baker and William Haynes. </p>
+<p> In this question, we want to know what the cutting force is at A and B given an applied load <InlineEquation equation='F'/=60N. </p>
 
 <Image src='/Statics/FramesMachinesFigures/Machine_Pliers.jpg' width='4'></Image>
     <div slot="solution">
@@ -85,7 +85,7 @@ Frame and machine analysis involves the following steps:
 
 	<Image src='/Statics/FramesMachinesFigures/FBD_GE.jpg' width='5'></Image>
 
-	Taking the sum of force in the x and y direction and the sum of moments about G, we can solve for F<sub>DE</sub>, which is -362.038 N. 
+	Taking the sum of force in the x and y direction and the sum of moments about G, we can solve for <InlineEquation equation='F_DE'/, which is -362.038 N. 
 
 	We can then draw a FBD for member ACD: 
 
