--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -64,8 +64,8 @@ The maximum static frictional force is written as:
             <p>
                 Mabuchi et al. conducted a <a href = "https://www.jstage.jst.go.jp/article/trol/7/3/7_147/_article">study in 2012</a> to examine the coefficient of static friction of a banana peel! 
 		</p>
-		<p>They found banana peels to be almost 6x as slippery as the floor, with <InlineEquation equation=" \\mu_s "/>= 0.066! 
-		They also examined other fruit peels and found apples have a <InlineEquation equation=" \\mu_s "/> of 0.125, orange peels have a <InlineEquation equation=" \\mu_s "/> of 0.198, and tangerine peels are the least slippery with <InlineEquation equation=" \\mu_s "/> = 0.225. 
+		<p>They found <strong>banana peels</strong> to be almost 6x as slippery as the floor, with <InlineEquation equation=" \\mu_s "/>= 0.066! 
+		They also examined other fruit peels and found <strong>apples</strong> have a <InlineEquation equation=" \\mu_s "/> of 0.125, <strong>orange peels</strong> have a <InlineEquation equation=" \\mu_s "/> of 0.198, and <strong>tangerine peels</strong> are the least slippery with <InlineEquation equation=" \\mu_s "/> = 0.225. 
               </p>
 
 		<Image src='/Statics/FrictionFigures/BananaPeel.png' width='8'>Image from Mabuchi, Kiyoshi, et al. "Ig Nobel Prize-winning episode: Trip from a slip on a banana peel to the mysterious world of mucus." Biosurface and Biotribology 2.3 (2016): 81-85.</Image>
