--- a/src/pages/sta/frames_and_machines.astro
+++ b/src/pages/sta/frames_and_machines.astro
@@ -85,17 +85,17 @@ Frame and machine analysis involves the following steps:
 
 	<Image src='/Statics/FramesMachinesFigures/FBD_GE.jpg' width='5'></Image>
 
-	Taking the sum of force in the x and y direction and the sum of moments about G, we can solve for <InlineEquation equation='F_DE'/, which is -362.038 N. 
+	<p> Taking the sum of force in the x and y direction and the sum of moments about G, we can solve for <InlineEquation equation='F_{DE}'/, which is -362.038 N. </p>
 
-	We can then draw a FBD for member ACD: 
+	<p> We can then draw a FBD for member ACD: 
 
-	Note that the force DE, which was in the FBD for member GE, is facing the opposite direction in this FBD. 
+	Note that the force DE, which was in the FBD for member GE, is facing the opposite direction in this FBD. </p>
 
 	<Image src='/Statics/FramesMachinesFigures/FBD_ACD.jpg' width='5'></Image>
 
-	Writing the sum of moments about point C allows us to solve for the force at A, which is 268.692 N. 
+	<p> Writing the sum of moments about point C allows us to solve for the force at A, which is 268.692 N. </p>
 
-	We can also calculate the mechanical advantage of this machine by dividing the cutting force by the applied force of 60 N. In this case, the maching gives a mechanical advantage of 4.478. 
+	<p> We can also calculate the mechanical advantage of this machine by dividing the cutting force by the applied force of 60 N. In this case, the maching gives a mechanical advantage of 4.478. </p>
 
 	</p>
 
