--- a/src/pages/sta/frames_and_machines.astro
+++ b/src/pages/sta/frames_and_machines.astro
@@ -85,11 +85,11 @@ Frame and machine analysis involves the following steps:
 
 	<Image src='/Statics/FramesMachinesFigures/FBD_GE.jpg' width='5'></Image>
 
-	<p> Taking the sum of force in the x and y direction and the sum of moments about G, we can solve for <InlineEquation equation='F_{DE}'/, which is -362.038 N. </p>
+	<p> Taking the sum of force in the x and y direction and the sum of moments about G, we can solve for <InlineEquation equation='F_{DE}'/>, which is -362.038 N. </p>
 
 	<p> We can then draw a FBD for member ACD: 
 
-	Note that the force DE, which was in the FBD for member GE, is facing the opposite direction in this FBD. </p>
+	Note that the force <InlineEquation equation='F_{DE}'/>, which was in the FBD for member GE, is facing the opposite direction in this FBD. </p>
 
 	<Image src='/Statics/FramesMachinesFigures/FBD_ACD.jpg' width='5'></Image>
 
