--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -330,7 +330,7 @@ import Searchbar from "./Searchbar.astro";
     <div class="navbar-collapse collapse pt-2 pb-2 pb-lg-0" id="mainnav">
         <ul class="navbar-nav w-100">
             <li class="dropdown mega nav-item">
-                <a class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="About" onclick="window.location.href='/sta'">
+                <a class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="About" class-value="sta">
                     <span>Statics</span>
                 </a>
                 <div class="dropdown-menu tile-list px-2" id="mainnav-statics">
@@ -357,7 +357,7 @@ import Searchbar from "./Searchbar.astro";
                 </div>
             </li>
             <li class="dropdown mega nav-item ">
-                <a class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="About" onclick="window.location.href=`/dyn`">
+                <a class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="About" class-value="dyn">
                     <span>Dynamics</span>
                 </a>
                 <div class="dropdown-menu tile-list px-2" id="mainnav-dynamics">
@@ -379,7 +379,7 @@ import Searchbar from "./Searchbar.astro";
                 </div>
             </li>
             <li class="dropdown mega nav-item ">
-                <a class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="About" onclick="window.location.href=`/sol`">
+                <a class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="About" class-value="sol">
                     <span>Solid Mechanics</a></span>
                 </a>
                 <div class="dropdown-menu tile-list px-2" id="mainnav-solids"> 
@@ -456,6 +456,16 @@ showHideScrollDiv();
     }
 
     //experiment for on hover menu activation
+
+$("a.nav-link").on('click', function(e){
+    if (window.innerWidth >= 992) {
+        $(location).prop('href', "/"+$(this).attr("class-value"));
+        console.log($(this).attr("class-value"))
+    }
+
+    
+})
+
 
 //activate dropdown menus on mouse hover
 $("#mainnav .nav-item").on("mouseenter", 
