--- a/src/pages/sol/stress.astro
+++ b/src/pages/sol/stress.astro
@@ -233,16 +233,20 @@ We consider a homogeneous distribution of the internal force <InlineEquation equ
 
 <Itemize>
     <Item> <strong>Ultimate load ( <InlineEquation equation="P_u" /> ):</strong> force when specimen fails (breaks).</Item> 
-    <Item> <strong>Ultimate normal stress ( <InlineEquation equation="\\sigma_u" /> ):</strong> <DisplayEquation equation="\\sigma_u = \\frac{P_u}{A}\\" /></Item>
+    <Item> <strong>Ultimate normal stress ( <InlineEquation equation="\\sigma_u" /> ): stress when a specimen fails (breaks).</Item>
 </Itemize>
 
- A structure is safe if its strength exceeds the required strength.
+</strong> <DisplayEquation equation="\\sigma_u = \\frac{P_u}{A}\\" title="Ultimate normal stress" background="True"/>
+ 
+A structure is safe if its strength exceeds the required strength.
 
+<p>
  <strong>Factor of Safety (FS):</strong> Ratio of structural strength to maximum (allowed) applied load (<InlineEquation equation="P_{all}" />).
+</p>
 
-<DisplayEquation equation="P_{all} \\le \\frac{P_u}{FS}\\" />
+<DisplayEquation equation="P_{all} \\le \\frac{P_u}{FS}\\" title="Maximum allowed applied load." background="True"/>
 
- Similarly, <DisplayEquation equation="\\sigma_{all} \\le \\frac{\\sigma_u}{FS}\\" />
+ Similarly, <DisplayEquation equation="\\sigma_{all} \\le \\frac{\\sigma_u}{FS}\\" title="Maximum allowed applied stress." background="True"/>
 
 </SubSection>
 
