--- a/src/pages/sol/strain.astro
+++ b/src/pages/sol/strain.astro
@@ -63,7 +63,7 @@ Dimensionless [mm/mm, in/in, or %]
     Relative change in <strong>length</strong> of a line element oriented in arbitrary direction <InlineEquation equation="n" />.
 </p>
 
-<DisplayEquation equation=" \\varepsilon_n = lim_{B  \\xrightarrow{} A \\rm\\ along \\rm\\ n} \\frac{\\Delta s - \\Delta s'}{\\Delta s} \\" title="Axial (normal)strain." background="True"/>
+<DisplayEquation equation=" \\varepsilon_n = lim_{B  \\xrightarrow{} A \\rm\\ along \\rm\\ n} \\frac{\\Delta s - \\Delta s'}{\\Delta s} \\" title="Axial (normal) strain." background="True"/>
 
 <!--  <DisplayEquation equation=" \\varepsilon_n = lim_{B-&gt;A \\rm\\ along \\rm\\ n} \\frac{\\Delta s = \\Delta s&#39;}{\\Delta s} \\" /> -->
 
@@ -82,17 +82,17 @@ Dimensionless [mm/mm, in/in, or %]
 
 <Itemize>
     <Item> <strong>Engineering</strong> or nominal (normal) strain: Average normal strain using the original (undeformed) total length.
-    <DisplayEquation equation=" \\varepsilon_{eng} = \\frac{\\delta}{L_0}\\" id="sta-eng" background="True" title="Engineering strain"/> </Item>
+    <DisplayEquation equation=" \\varepsilon_{eng} = \\frac{\\delta}{L_0}\\" id="sta-eng" background="True" title="Engineering strain."/> </Item>
     <Item> <strong>True</strong> (normal) strain: Integrate infinitesimal normal strains.
     <Image src="/Solid_Mechanics/Strain-Figures/True Strain.png" width="5.5"> True strain</Image>
     
 
-    <DisplayEquation equation=" \\varepsilon_{true} = ln(1 + \\frac{\\delta}{L_0})\\" id="sta-ts"  derivation="True" background="True" title="True strain">
+    <DisplayEquation equation=" \\varepsilon_{true} = ln(1 + \\frac{\\delta}{L_0})\\" id="sta-ts"  derivation="True" background="True" title="True strain.">
         <DisplayEquation equation="\\begin{align} \\varepsilon_{true} &= \\Sigma\\Delta\\varepsilon_0 = \\int d\\varepsilon \\\\ \\varepsilon_{true} &= \\int_{L_0}^{L_f}\\frac{1}{L}dL \\\\ \\varepsilon_{true} &= ln(L)|_{L_0}^{L_f} = ln(\\frac{L_f}{L_0}) \\\\ \\varepsilon_{true} &= ln(\\frac{L_0+\\delta}{L_0}) = ln(1+\\frac{\\delta}{L_0}) \\\\ \\varepsilon_{true} &= \\varepsilon_{eng}-\\frac{1}{2}\\varepsilon_{eng}^2 + \\frac{1}{3}\\varepsilon_{eng}^{3} + ...\\end{align}" />
     </DisplayEquation>
     </Item>
     <Item> For small strain: 
-        <DisplayEquation equation="\\varepsilon_{true} \\approx \\varepsilon_{eng}" id="sta-ssa" background="True" title="Small strain approximation"/>
+        <DisplayEquation equation="\\varepsilon_{true} \\approx \\varepsilon_{eng}" id="sta-ssa" background="True" title="Small strain approximation."/>
     </Item>
 </Itemize>
 
@@ -113,7 +113,7 @@ Dimensionless [mm/mm, in/in, or %]
     When strains are small, the small angle approximation, <InlineEquation equation="\\sin(\\theta)\\approx \\theta" />, results in
 </p>
 
-<DisplayEquation equation="\\gamma = \\frac{\\pi}{2} - \\theta \\approx \\frac{\\delta}{L}\\" title="Shear strain with the small angle approximaion" background="True"/>
+<DisplayEquation equation="\\gamma = \\frac{\\pi}{2} - \\theta \\approx \\frac{\\delta}{L}\\" title="Shear strain with the small angle approximaion." background="True"/>
 
 </SubSection>
 
