work on notebooks and removed vw problems

--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -130,7 +130,7 @@ If a body is in equilibrium, the sum of the virtual work done by all the forces 
 <p>
 For example, if a truss is completely pinned on one end, it doesn't move, which means there is no virtual work completed on that pin because there are no virtual displacements (<InlineEquation equation='dr = 0' />). This means that we can ignore it in our virtual work equation and don't need to solve for the reaction forces at the truss pin. 
 </p>
-
+<!-- 
 <Example id="pin-trs" title="Virtual work problem: box on a structure." solution="True">
     <div class="d-flex">
         <div class="d-flex flex-row">
@@ -222,9 +222,9 @@ For example, if a truss is completely pinned on one end, it doesn't move, which 
         <DisplayEquation equation="P = \\frac{Wcos\\theta}{2sin\\theta}"/>
     </Enumerate>
 </p>
-</div>
+</div> 
 
-</Example>
+</Example>-->
 <Warning title="Virtual work can be an easier method of solving for some problems." id="vrt-wrk">
     <p>
       For simple problems, virtual work is about the same amount of work as the equilibrium equations. 
